dark mode fixes localstorage support for mode switching

--- a/dev/scss/components/chapters.scss
+++ b/dev/scss/components/chapters.scss
@@ -110,8 +110,8 @@
             z-index: 1;
             right: 0px;
             width: 100%;
-            background: #fff;
-            border: 1px solid #f1f1f1;
+            background: var(--secondary-color);
+            border: 1px solid var(--border-color);
             overflow: hidden;
             max-width: max-content;
             border-bottom-left-radius: 6px;
@@ -124,13 +124,13 @@
         
         .sort__chapters ul li {
             padding: 8px 15px;
-            border-bottom: 1px solid #f2f2f2;
+            border-bottom: 1px solid var(--border-color);
             cursor: pointer;
-            color: #000;
+            color: var(--text-color);
         }
         
         .sort__chapters ul li.active {
-            background: #308d4d;
+            background: var(--main-color);
             color: #fff;
         }
         
